@@ -1,0 +1,1 @@
+allow_archetype OBSERVATION[at0001] matches {*}
