@@ -1,3 +1,6 @@
+2007/01/20
+.bug fix related to null includes or excludes in printArchetypeSlot
+
 2007/01/14
 .added support for CCodePhrase
 .added support for archetype language
